Partial performance fix for bug 25509. Restrict the size of text nodes (the max is settable via a pref-content.maxtextrun). r=nisheeth